--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
     "element-ui": "^2.0.4",
     "jquery": "^3.2.1",
     "viewerjs": "^0.10.0",
